--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,6 +18,9 @@ body {
 
 .section {
     padding: 100px 0;
+    border: 1px solid rgba(255, 255, 255, 0.103);
+    border-left: none;
+    border-right: none;
 }
 
 .dark-bg {
