--- a/src/css/components.css
+++ b/src/css/components.css
@@ -3,11 +3,13 @@
 ========================= */
 
 .component-display {
+
     max-width: 1200px;
+    min-height: 100svh;
     margin: 0 auto;
-    padding: 0 20px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 32px;
 }
 
