--- a/src/css/details.css
+++ b/src/css/details.css
@@ -3,19 +3,10 @@
     grid-template-columns: 1.2fr 0.8fr;
     gap: 60px;
     align-items: start;
+    
 }
-
-.label-box {
-    background: #fff;
-    color: #000;
-    width: 60px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 700;
-    border-radius: 4px;
-    margin-bottom: 25px;
+.content-block{
+  margin-top: 30px;
 }
 
 .content-block p {
