--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -4,9 +4,9 @@
     --bg-color: #000000;
     --card-bg: #1a1a1a;
     --text-primary: #ffffff;
-    --text-secondary: #a0a0a0;
-    --accent-gold: #c09d54;
-    --accent-hover: #d4af37;
+    --text-secondary: #d5d5d5;
+    --accent-gold: #adadad;
+    --accent-hover: #5637d4;
     --font-main: 'Noto Sans Armenian', sans-serif;
     --transition: all 0.3s ease;
 }
