--- a/src/css/components.css
+++ b/src/css/components.css
@@ -11,9 +11,11 @@
     justify-content: center;
     gap: 32px;
 }
-.section.bg{
+
+.section.bg {
     padding: 0;
 }
+
 /* =========================
    MAIN IMAGE
 ========================= */
@@ -211,6 +213,102 @@
 }
 
 
+
+
+
+/* =========================
+   ZOOM OVERLAY
+========================= */
+
+ 
+.zoom-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, .7);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.zoom-overlay.is-open {
+    display: flex;
+}
+
+.zoom-container {
+    position: relative;
+    max-width: 100svw;
+    max-height: 100svh;
+    background: #000;
+    border-radius: 12px;
+    padding: 16px;
+    box-sizing: border-box;
+}
+
+.zoom-image {
+    min-width: 70svw;
+    min-height: 70svh;
+    max-width: 100svw;
+    max-height: 100svh;
+    object-fit: contain;
+    display: block;
+}
+
+.zoom-close {
+    position: absolute;
+    right: 40px;
+    top: 40px;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: none;
+    background: #000000d1;
+    font-size: 18px;
+    cursor: pointer;
+
+    &:hover {
+        color: #ffffff68;
+    }
+}
+
+.zoom-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.9);
+    border: none;
+    font-size: 28px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+        color: #ffffff68;
+    }
+}
+
+.zoom-arrow.prev {
+    left: -40px;
+}
+
+.zoom-arrow.next {
+    right: -40px;
+}
+
+
+.zoom-btn {
+    position: absolute;
+    right: 12px;
+    bottom: 92px;
+    background: rgba(0, 0, 0, .6);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 10px;
+    cursor: pointer;
+}
+
 /* =========================
    RESPONSIVE
 ========================= */
@@ -253,7 +351,3 @@
 .swiper-slide {
     flex-shrink: 0;
 }
-
-
-
-  
