--- a/src/css/base.css
+++ b/src/css/base.css
@@ -11,7 +11,6 @@ body {
     background-color: var(--bg-color);
     color: var(--text-primary);
     font-family: var(--font-main);
-    line-height: 1.6;
     overflow-x: hidden;
 }
 
@@ -23,14 +22,17 @@ body {
 
 .section {
     min-height: 100svh;
-    padding: 100px 0 !important;
     border: 1px solid rgba(255, 255, 255, 0.103);
     border-left: none;
     border-right: none;
 
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
 
- 
+}
 
 .text-center {
     text-align: center;
