--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,11 +1,10 @@
 /* =========================
    COMPONENTS (Gallery Block)
 ========================= */
+ 
 
 .component-display {
-    max-width: 1200px;
-    min-height: 100svh;
-    margin: 0 auto;
+    max-width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,7 +23,6 @@
     position: relative;
     border: 1px solid rgba(255, 255, 255, 0.08);
     background-color: var(--card-bg);
-    border-radius: 12px;
 }
 
 .main-plan-img {
