--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -44,7 +44,7 @@
 }
 
 .btn-close {
-    background: #d9534f;
+    background: #000000;
     color: #fff;
     border: none;
     padding: 8px 18px;
