--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,7 +18,8 @@ body {
     width: min(1400px, 100%);
     margin-inline: auto;
     padding-inline: clamp(16px, 2vw, 24px);
-}
+
+ }
 
 .section {
     min-height: 100svh;
@@ -30,7 +31,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    padding: clamp(16px, 3vh, 48px) 0;
+
 
 }
 
