--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,17 +1,8 @@
-.hero-section {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: relative;
-}
 
 .hero-title {
     font-size: 5rem;
     font-weight: 300;
     letter-spacing: 20px;
-    margin-bottom: 20px;
     color: var(--accent-gold);
 }
 
@@ -21,5 +12,12 @@
     letter-spacing: 3px;
     max-width: 800px;
     text-align: left;
+    width: 20%;
 
+
+}
+.hero-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
