--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,10 @@
+@import "./nav.css";
 @import "./reset.css";
 @import "./normalize.css";
 
 @import "./variables.css";
 @import "./base.css";
 
-@import "./navbar.css";
 @import "./hero.css";
 @import "./components.css";
 @import "./details.css";
