--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,40 +1,42 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .bg {
-    background-image: url('../images/background.jpg')  ;
-    background-size: cover;
+  min-height: 100vh;
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.748) 0%, rgba(0, 0, 0, 0.473) 100%),
+    url("/images/background.jpg");
+
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
 
 body {
-    background-color: var(--bg-color);
-    color: var(--text-primary);
-    font-family: var(--font-main);
-    overflow-x: hidden;
+  background-color: var(--bg-color);
+  color: var(--text-primary);
+  font-family: var(--font-main);
+  overflow-x: hidden;
 }
 
 .container {
-    width: min(1400px, 100%);
-    margin-inline: auto;
-    padding-inline: clamp(16px, 2vw, 24px);
-
- }
+  width: min(1400px, 100%);
+  margin-inline: auto;
+  padding-inline: clamp(16px, 2vw, 24px);
+}
 
 .section {
-    min-height: 100svh;
-    border: 1px solid rgba(255, 255, 255, 0.103);
-    border-left: none;
-    border-right: none;
+  min-height: 100svh;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: clamp(16px, 3vh, 48px) 0;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: clamp(16px, 3vh, 48px) 0;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
