--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,12 +1,11 @@
 /* =========================
    LAYOUT
    ========================= */
- 
+
 .split-view {
   display: grid;
-  grid-template-columns: 1fr 360px;
-  gap: 48px;
-  align-items: start;
+  grid-template-columns: 1fr 400px;
+  align-items: center;
 }
 
 @media (max-width: 900px) {
@@ -69,11 +68,33 @@
 .document-list {
   background: var(--card-bg);
   border: 1px solid rgba(255, 255, 255, 0.08);
-  border-radius: 12px;
+  border-radius: 6px;
   padding: 18px;
   display: flex;
   flex-direction: column;
   gap: 12px;
+
+  max-height: 90svh;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.1) transparent;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.2);
+  }
 }
 
 /* =========================
@@ -87,6 +108,7 @@
 }
 
 .doc-item {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -96,20 +118,59 @@
   border: 1px solid rgba(255, 255, 255, 0.08);
   color: var(--text-primary);
 
-  border-radius: 10px;
+  border-radius: 6px;
   cursor: pointer;
   transition: background 0.2s ease, border-color 0.2s ease;
   text-align: left;
 
 
-
 }
+.doc-item::after {
+    content: "👁 Դիտել";            
+    position: absolute;             
+    right: 66px;                    
+    top: 50%;                       
+    transform: translateY(-50%) translateX(10px); 
+    opacity: 0;                      
+    font-size: 0.85em;               
+    color: var(--accent-hover);     
+    transition: opacity 0.3s ease, transform 0.3s ease; 
+    pointer-events: none;           
+}
+
+.doc-item:hover::after {
+    opacity: 1;
+    transform: translateY(-50%) translateX(0); 
+}
+
 .doc-item:hover {
   background: rgba(255, 255, 255, 0.08);
   border-color: var(--accent-hover);
 }
 
+.doc-row-all-download {
+  padding: 10px;
+  box-shadow: 0 4px 0 0 rgba(255, 255, 255, 0.396);
  
+}
+
+
+
+.doc-row-all {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.2s ease, border-color 0.2s ease;
+  &:hover {
+    background: rgba(255, 255, 255, 0.08);
+    border-color: var(--accent-hover);
+    color:white;
+  }
+}
 
 .doc-download {
   width: 42px;
