--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,23 +1,25 @@
+.hero-section {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.103);
+}
 
 .hero-title {
-    font-size: 5rem;
-    font-weight: 300;
-    letter-spacing: 20px;
-    color: var(--accent-gold);
+  font-size: 5rem;
+  font-weight: 300;
+  letter-spacing: 20px;
+  color: var(--accent-gold);
 }
 
 .hero-subtitle {
-    font-size: 1rem;
-    color: var(--text-secondary);
-    letter-spacing: 3px;
-    max-width: 800px;
-    text-align: left;
-    width: 20%;
-
-
+  font-size: 1rem;
+  color: var(--text-secondary);
+  letter-spacing: 3px;
+  max-width: 800px;
+  text-align: left;
+  width: 20%;
 }
-.hero-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.hero-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
