--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -7,12 +7,8 @@
   left: 0;
   width: 100%;
   z-index: 2000;
-
-  padding: 1rem 4.5rem;
-  background: #fff;
-
-  backdrop-filter: blur(6px);
-  border-bottom: 1px solid rgba(203, 180, 136, 0.15);
+  padding: .5rem 4.5rem;
+  background: #fafafa;
   transition: transform 0.35s ease;
 }
 
@@ -28,7 +24,7 @@
 
 .main-header__logo img {
   height: 40px;
-  max-height: 48px;
+  max-height: 40px;
   width: auto;
 }
 
@@ -80,17 +76,18 @@
   display: block;
   width: 100%;
   height: 3px;
-  background-color: #000; /* было white */
+  background-color: #000;
   transition: 0.3s ease;
 }
 
-/* X animation */
 .burger-btn.active span:nth-child(1) {
   transform: translateY(9px) rotate(45deg);
 }
+
 .burger-btn.active span:nth-child(2) {
   opacity: 0;
 }
+
 .burger-btn.active span:nth-child(3) {
   transform: translateY(-9px) rotate(-45deg);
 }
