--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -18,6 +18,7 @@
 }
 
 @media (max-width: 600px) {
+
     .nav-links {
         display: none;
     }
@@ -30,6 +31,26 @@
         padding: 20px;
         flex-direction: column;
     }
+
+    .hero-content {
+        display: flex;
+        flex-direction: column;
+
+
+
+    }
+
+    .hero-subtitle {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+
+    }
+
+
+
 
     .valuation-images {
         flex-direction: column;
