--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -5,7 +5,7 @@
     --card-bg: #080808a2;
     --text-primary: #ffffff;
     --text-secondary: #d5d5d5;
-    --accent-gold: #ac8c1a;
+    --accent-gold: #82690F;
     --accent-hover: #DADBEF;
     --font-main: 'Noto Sans Armenian', sans-serif;
     --transition: all 0.3s ease;
