--- a/src/css/base.css
+++ b/src/css/base.css
@@ -52,6 +52,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: clamp(16px, 3vh, 48px) 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.103);
 }
 
 .text-center {
