--- a/src/css/base.css
+++ b/src/css/base.css
@@ -13,19 +13,15 @@ html {
   background-position: center;
 }
 
-.metal-text {
-
+.text-image {
   background-image: url("/images/metal-text-bg.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
-
   color: transparent;
-
   -webkit-background-clip: text;
   background-clip: text;
-
   -webkit-text-fill-color: transparent;
-
+  font-size: 1rem;
 }
 
 
