--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,26 +1,37 @@
- .hero-title {
-   font-size: 5rem;
-   font-weight: 500;
-   letter-spacing: 20px;
-   color: var(--accent-gold);
-   letter-spacing: 2rem;
+.hero-text {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color:rgb(255, 255, 255);
+  
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
 
- }
+}
 
- .hero-subtitle {
-   font-size: 1rem;
-   color: var(--text-secondary);
-   letter-spacing: 3px;
-   max-width: 800px;
-   text-align: left;
-   width: 20%;
- }
+.hero-logo img {
+  width: 300px;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  user-select: none;
+  -webkit-user-drag: none;
+}
 
- .hero-content {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+section.hero-section.bg-yerevan {
+  min-height: 70vh;
+}
 
+.bg-yerevan {
 
- }
+  background-image: url('/images/Yerevan.jpg');
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin-top: 3.2rem;
+}
