refactor: change image format from jpeg to webp

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -28,7 +28,7 @@ section.hero-section.bg-yerevan {
 
 .bg-yerevan {
 
-  background-image: url('/images/Yerevan.jpg');
+  background-image: url('/images/Yerevan.webp');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
