--- a/src/css/details.css
+++ b/src/css/details.css
@@ -223,3 +223,11 @@
   }
 
 }
+
+.header-block {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+    padding: 10px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
