--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,37 +1,49 @@
-.hero-text {
-  font-size: 1.4rem;
-  font-weight: 600;
-  color:rgb(255, 255, 255);
-  
-}
+ .hero-content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 
-.hero-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+ }
+
+ .hero-logo img {
+   width: 200px;
+   margin-bottom: 1rem;
+   user-select: none;
+   -webkit-user-drag: none;
+ }
+
+ section.hero-section.bg-yerevan {
+   min-height: 70vh;
+ }
 
 
-}
+ .bg-yerevan {
 
-.hero-logo img {
-  width: 300px;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-  user-select: none;
-  -webkit-user-drag: none;
-}
+   background-image: url('/images/Yerevan.webp');
+   background-size: cover;
+   background-position: top;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   margin-top: 3.2rem;
+ }
 
-section.hero-section.bg-yerevan {
-  min-height: 70vh;
-}
+ .hero-text {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   line-height: 0;
 
-.bg-yerevan {
+ }
 
-  background-image: url('/images/Yerevan.webp');
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  margin-top: 3.2rem;
-}
+ .hero-title {
+   display: flex;
+   justify-content: center;
+   font-size: 2.4rem;
+   width: 40vw;
+   text-align: center;
+   line-height: 1;
+   text-shadow: 0 0 10px rgba(255, 255, 255, 0.425);
+ }
+
+ 
