--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -55,14 +55,18 @@
 
 @media (max-width: 992px) {
     .hero-title {
-        font-size: 3rem;
+        font-size: 2rem;
         letter-spacing: 10px;
     }
 }
 
 @media (max-width: 600px) {
+    .hero-logo img {
+        width: 150px;
+    }
+
     .hero-title {
-        font-size: 2rem;
+        font-size: 1.4rem;
     }
 
     .hero-content {
