--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,12 +1,9 @@
 /* =========================
    LAYOUT
    ========================= */
-#details {
-  background-image: url('https://jooinn.com/images/stone-grunge-texture-5.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
+
+
 .split-view {
   display: grid;
   grid-template-columns: 1fr 400px;
@@ -16,6 +13,7 @@
   background: linear-gradient(45deg, #17181eed 0%, #0f0f0ff1 100%);
   padding: 24px;
   border-radius: 12px;
+
 }
 
 
@@ -43,6 +41,7 @@
 .content-block li {
   margin-bottom: 10px;
   color: var(--text-secondary);
+
 }
 
 .content-block .bold-white {
@@ -59,27 +58,24 @@
   border-radius: 12px;
   background: linear-gradient(45deg, #0c0c0c98 0%, #42424278 100%);
 
+ 
+
   & ul {
     margin-left: 10px;
     line-height: 1.5;
     display: grid;
     grid-template-columns: 1fr 1fr;
-
     column-gap: 10px;
   }
 
   & ul li {
     font-size: .8rem;
     line-height: 1.4;
-
     padding: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.08);
-    background: linear-gradient(135deg, #343434 0%, #262626 100%);
+    border: none;
+    background: linear-gradient(45deg, #00000075 0%, #0f0f0f00 100%);
+    color: white;
     border-radius: 6px;
-
-    &:hover {
-      color: white;
-    }
   }
 }
 
@@ -268,4 +264,10 @@
 .h3-bold-white {
   font-size: 1.5rem;
   margin-bottom: 20px;
+}
+
+.left-shadow {
+  box-shadow: -7px 0 0 rgba(204, 204, 204, 0.445);
+  margin-left: 7px;
+  padding-left: 10px;
 }
