--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -12,7 +12,7 @@ section.hero-section.bg-yerevan {
 
 .bg-yerevan {
 
-  background-image: url('/images/Yerevan.webp');
+  background-image: url('/images/bg.jpeg');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
