--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,3 +1,8 @@
+#details {
+  background-image: url("/images/detailsBG.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 /* =========================
    LAYOUT
    ========================= */
@@ -115,7 +120,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  max-height: 90svh;
+  max-height: 70svh;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: rgba(255, 255, 255, 0.1) transparent;
